[gd_scene load_steps=3 format=3 uid="uid://bwdrursyql7w8"]

[ext_resource type="Script" path="res://codes/win_scene.gd" id="1_sdsmx"]
[ext_resource type="AudioStream" uid="uid://bdrpc2eq51d16" path="res://Sound/SunnyLand Music/SunnyLand Music/Adventure pack 1 ogg/happywalking.ogg" id="2_0wi8f"]

[node name="DeathScene" type="Node2D"]
script = ExtResource("1_sdsmx")

[node name="Label" type="Label" parent="."]
offset_left = 280.0
offset_top = 40.0
offset_right = 880.0
offset_bottom = 176.0
theme_override_font_sizes/font_size = 50
text = "You Won!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButton" type="Button" parent="."]
offset_left = 400.0
offset_top = 232.0
offset_right = 753.0
offset_bottom = 320.0
theme_override_font_sizes/font_size = 40
text = "Main Menu"

[node name="QuitButton" type="Button" parent="."]
offset_left = 400.0
offset_top = 392.0
offset_right = 753.0
offset_bottom = 480.0
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="BackgroundSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_0wi8f")
autoplay = true

[connection signal="pressed" from="MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="finished" from="BackgroundSound" to="." method="_on_background_sound_finished"]
